force-app/main/default/objects/Appointment__c/fields/Consult_Type__c.field-meta.xml
<CustomField>
    <fullName>Consult_Type__c</fullName>
    <label>Consult Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Hospital</fullName>
            </value>
            <value>
                <fullName>Virtual Consult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>