force-app/main/default/objects/Appointment__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Ranchi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>