force-app/main/default/objects/Appointment__c/fields/Patient_Case__c.field-meta.xml
<CustomField>
    <fullName>Patient_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Case</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>