force-app/main/default/objects/Appointment__c/fields/Slot__c.field-meta.xml
<CustomField>
    <fullName>Slot__c</fullName>
    <label>Slot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>