force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consult_Type__c</columns>
    <columns>Lead__c</columns>
    <columns>Patient_Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>